@@ -54,8 +54,8 @@ public class DtoTest {
     @Test
     public void serializeLayerWithEmptyCollections() {
         Layer layer = Layer.builder()
-            .legend(Legend.builder().build())
-            .build();
+                .legend(Legend.builder().build())
+                .build();
         layer.getLegend().setSteps(null);
         layer.getLegend().setColors(null);
 
@@ -71,9 +71,11 @@ public class DtoTest {
         Mockito.when(layerService.getList(any())).thenReturn(List.of(layer));
 
         LayerSummarySearchDto
-            input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed", new Point(new double[]{1, 0}));
-        List<LayerSummaryDto> response = Arrays.asList(restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
-            .getBody());
+                input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed",
+                new Point(new double[]{1, 0}));
+        List<LayerSummaryDto> response = Arrays.asList(
+                restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
+                        .getBody());
 
         Assertions.assertEquals(layer.getId(), response.get(0).getId());
         Assertions.assertEquals(layer.isEventIdRequiredForRetrieval(), response.get(0).isEventIdRequiredForRetrieval());
@@ -81,7 +83,8 @@ public class DtoTest {
         Assertions.assertEquals(layer.getDescription(), response.get(0).getDescription());
         Assertions.assertEquals(layer.getCategory(), response.get(0).getCategory());
         Assertions.assertEquals(layer.getGroup(), response.get(0).getGroup());
-        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(), response.get(0).isBoundaryRequiredForRetrieval());
+        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(),
+                response.get(0).isBoundaryRequiredForRetrieval());
         Assertions.assertEquals(layer.getCopyrights(), response.get(0).getCopyrights());
         Assertions.assertEquals(layer.getLegend(), response.get(0).getLegend());
     }
@@ -89,19 +92,24 @@ public class DtoTest {
     @Test
     public void serializeDeserializeDetailsFromGeometryTest() {
         String id = "123";
-        Layer layer = testLayer(id, new FeatureCollection(new Feature[]{new Feature(new Point(new double[]{1d, 2d}), new HashMap<>())}));
+        Layer layer = testLayer(id,
+                new FeatureCollection(new Feature[]{new Feature(new Point(new double[]{1d, 2d}), new HashMap<>())}));
         Mockito.when(layerService.get(any(), any(), any())).thenReturn(List.of(layer));
 
-        LayerDetailsSearchDto input = new LayerDetailsSearchDto(new Point(new double[]{1, 0}), List.of(layer.getId()), List.of(), UUID.randomUUID(), UUID.randomUUID(), "some-feed");
-        List<LayerDetailsDto> response = Arrays.asList(restTemplate.postForEntity(DETAILS_URL, input, LayerDetailsDto[].class)
-            .getBody());
+        LayerDetailsSearchDto input = new LayerDetailsSearchDto(new Point(new double[]{1, 0}), List.of(layer.getId()),
+                List.of(), UUID.randomUUID(), UUID.randomUUID(), "some-feed");
+        List<LayerDetailsDto> response = Arrays.asList(
+                restTemplate.postForEntity(DETAILS_URL, input, LayerDetailsDto[].class)
+                        .getBody());
 
         Assertions.assertEquals(layer.getId(), response.get(0).getId());
         Assertions.assertEquals(layer.getMinZoom(), response.get(0).getMinZoom());
         Assertions.assertEquals(layer.getMaxZoom(), response.get(0).getMaxZoom());
 
-        Assertions.assertArrayEquals(((Point) layer.getSource().getData().getFeatures()[0].getGeometry()).getCoordinates(),
-            ((Point) ((FeatureCollection) response.get(0).getSource().getData()).getFeatures()[0].getGeometry()).getCoordinates());
+        Assertions.assertArrayEquals(
+                ((Point) layer.getSource().getData().getFeatures()[0].getGeometry()).getCoordinates(),
+                ((Point) ((FeatureCollection) response.get(0).getSource()
+                        .getData()).getFeatures()[0].getGeometry()).getCoordinates());
 
         Assertions.assertEquals(layer.getSource().getType(), response.get(0).getSource().getType());
         Assertions.assertEquals(layer.getSource().getTileSize(), response.get(0).getSource().getTileSize());
@@ -114,10 +122,12 @@ public class DtoTest {
         Layer layer = testLayer(id, new FeatureCollection(null));
         Mockito.when(layerService.getList(any())).thenReturn(List.of(layer));
 
-        LayerSummarySearchDto input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed", new Feature(new Point(
-            new double[]{1, 0}), new HashMap<>()));
-        List<LayerSummaryDto> response = Arrays.asList(restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
-            .getBody());
+        LayerSummarySearchDto input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed",
+                new Feature(new Point(
+                        new double[]{1, 0}), new HashMap<>()));
+        List<LayerSummaryDto> response = Arrays.asList(
+                restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
+                        .getBody());
 
         Assertions.assertEquals(layer.getId(), response.get(0).getId());
         Assertions.assertEquals(layer.isEventIdRequiredForRetrieval(), response.get(0).isEventIdRequiredForRetrieval());
@@ -125,7 +135,8 @@ public class DtoTest {
         Assertions.assertEquals(layer.getDescription(), response.get(0).getDescription());
         Assertions.assertEquals(layer.getCategory(), response.get(0).getCategory());
         Assertions.assertEquals(layer.getGroup(), response.get(0).getGroup());
-        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(), response.get(0).isBoundaryRequiredForRetrieval());
+        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(),
+                response.get(0).isBoundaryRequiredForRetrieval());
         Assertions.assertEquals(layer.getCopyrights(), response.get(0).getCopyrights());
         Assertions.assertEquals(layer.getLegend(), response.get(0).getLegend());
     }
@@ -136,12 +147,14 @@ public class DtoTest {
         Layer layer = testLayer(id, new FeatureCollection(null));
         Mockito.when(layerService.getList(any())).thenReturn(List.of(layer));
 
-        LayerSummarySearchDto input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed", new FeatureCollection(new Feature[]{
-            new Feature(new Point(new double[]{1, 0}), new HashMap<>()),
-            new Feature(new Point(new double[]{1, 0}), new HashMap<>())}));
+        LayerSummarySearchDto input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed",
+                new FeatureCollection(new Feature[]{
+                        new Feature(new Point(new double[]{1, 0}), new HashMap<>()),
+                        new Feature(new Point(new double[]{1, 0}), new HashMap<>())}));
 
-        List<LayerSummaryDto> response = Arrays.asList(restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
-            .getBody());
+        List<LayerSummaryDto> response = Arrays.asList(
+                restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
+                        .getBody());
 
         Assertions.assertEquals(layer.getId(), response.get(0).getId());
         Assertions.assertEquals(layer.isEventIdRequiredForRetrieval(), response.get(0).isEventIdRequiredForRetrieval());
@@ -149,7 +162,8 @@ public class DtoTest {
         Assertions.assertEquals(layer.getDescription(), response.get(0).getDescription());
         Assertions.assertEquals(layer.getCategory(), response.get(0).getCategory());
         Assertions.assertEquals(layer.getGroup(), response.get(0).getGroup());
-        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(), response.get(0).isBoundaryRequiredForRetrieval());
+        Assertions.assertEquals(layer.isBoundaryRequiredForRetrieval(),
+                response.get(0).isBoundaryRequiredForRetrieval());
         Assertions.assertEquals(layer.getCopyrights(), response.get(0).getCopyrights());
         Assertions.assertEquals(layer.getLegend(), response.get(0).getLegend());
     }
@@ -164,22 +178,22 @@ public class DtoTest {
         final String OTHER_PARAM_VALUE = "asd";
 
         Feature feature1 = new Feature(new Point(new double[]{1d, 2d}),
-            new HashMap<>());
+                new HashMap<>());
         feature1.getProperties().put(PARAM_NAME, "qwe11"); //feature 1 matching step1 pattern
         Feature feature2 = new Feature(new Point(new double[]{2d, 3d}),
-            new HashMap<>());
+                new HashMap<>());
         feature2.getProperties().put(PARAM_NAME, "qwePPP"); //feature 2 matching step1 pattern
         Feature feature3 = new Feature(new Point(new double[]{2d, 3d}),
-            new HashMap<>());
+                new HashMap<>());
         feature3.getProperties().put(PARAM_NAME, "asd"); //feature matching step2 value
 
         FeatureCollection geoJSON = new FeatureCollection(new Feature[]{feature1, feature2, feature3});
 
         LayerSource source = LayerSource.builder()
-            .type(LayerSourceType.RASTER)
-            .urls(List.of("url-com.com"))
-            .tileSize(2)
-            .data(geoJSON).build();
+                .type(LayerSourceType.RASTER)
+                .urls(List.of("url-com.com"))
+                .tileSize(2)
+                .data(geoJSON).build();
         Legend legend = new Legend("legendName", LegendType.SIMPLE, null, new ArrayList<>(),
                 new ArrayList<>(), new BivariateLegendAxes(), null);
         Map<String, Object> map = new HashMap<>();
@@ -187,33 +201,35 @@ public class DtoTest {
 
         //pattern step (1)
         legend.getSteps()
-            .add(new LegendStep(PARAM_NAME, PARAM_PATTERN, PARAM_VALUE,
-            null, null, "step name",
-            HEX, map, "source-layer", "", ""));
+                .add(new LegendStep(PARAM_NAME, PARAM_PATTERN, PARAM_VALUE,
+                        null, null, "step name",
+                        HEX, map, "source-layer", "", ""));
         //non-pattern step (2)
         legend.getSteps()
-            .add(new LegendStep(PARAM_NAME, null, OTHER_PARAM_VALUE,
-            null, null, "step name2",
-            HEX, map, "source-layer", "", ""));
+                .add(new LegendStep(PARAM_NAME, null, OTHER_PARAM_VALUE,
+                        null, null, "step name2",
+                        HEX, map, "source-layer", "", ""));
 
         Layer layerWithPattern = Layer.builder()
-            .id(id)
-            .name("test name")
-            .description("test description")
-            .category(LayerCategory.BASE)
-            .group("test group")
-            .legend(legend)
-            .copyrights(List.of("copyright text"))
-            .maxZoom(10)
-            .minZoom(1)
-            .source(source)
-            .build();
+                .id(id)
+                .name("test name")
+                .description("test description")
+                .category(LayerCategory.BASE)
+                .group("test group")
+                .legend(legend)
+                .copyrights(List.of("copyright text"))
+                .maxZoom(10)
+                .minZoom(1)
+                .source(source)
+                .build();
 
         Mockito.when(layerService.getList(any())).thenReturn(List.of(layerWithPattern));
         LayerSummarySearchDto
-            input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed", new Point(new double[]{1, 0}));
-        List<LayerSummaryDto> response = Arrays.asList(restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
-            .getBody());
+                input = new LayerSummarySearchDto(UUID.randomUUID(), UUID.randomUUID(), "some-feed",
+                new Point(new double[]{1, 0}));
+        List<LayerSummaryDto> response = Arrays.asList(
+                restTemplate.postForEntity(SEARCH_URL, input, LayerSummaryDto[].class)
+                        .getBody());
 
         Assertions.assertEquals(2, response.get(0).getLegend().getSteps().size());
         //both features (f1, f2) match the same pattern hence are merged into a single step
@@ -223,27 +239,28 @@ public class DtoTest {
 
     private Layer testLayer(String id, FeatureCollection geoJSON) {
         LayerSource source = LayerSource.builder()
-            .type(LayerSourceType.RASTER)
-            .urls(List.of("url-com.com"))
-            .tileSize(2)
-            .data(geoJSON).build();
-        Legend legend = new Legend("legendName", LegendType.SIMPLE, null, new ArrayList<>(), new ArrayList<>(), new BivariateLegendAxes(), null);
+                .type(LayerSourceType.RASTER)
+                .urls(List.of("url-com.com"))
+                .tileSize(2)
+                .data(geoJSON).build();
+        Legend legend = new Legend("legendName", LegendType.SIMPLE, null, new ArrayList<>(), new ArrayList<>(),
+                new BivariateLegendAxes(), null);
         Map<String, Object> map = new HashMap<>();
         map.put("prop", "value");
         legend.getSteps().add(new LegendStep("param name", null, "param value", null, null, "step name",
-            HEX, map, "source-layer", "", ""));
+                HEX, map, "source-layer", "", ""));
 
         return Layer.builder()
-            .id(id)
-            .name("test name")
-            .description("test description")
-            .category(LayerCategory.BASE)
-            .group("test group")
-            .legend(legend)
-            .copyrights(List.of("copyright text"))
-            .maxZoom(10)
-            .minZoom(1)
-            .source(source)
-            .build();
+                .id(id)
+                .name("test name")
+                .description("test description")
+                .category(LayerCategory.BASE)
+                .group("test group")
+                .legend(legend)
+                .copyrights(List.of("copyright text"))
+                .maxZoom(10)
+                .minZoom(1)
+                .source(source)
+                .build();
     }
 }
